--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "flow-bin": "^0.34.0",
     "flowtype": "^2.0.0"
   },
+  "engine": {
+    "node": "> 4"
+  },
   "homepage": "https://github.com/9renpoto/eslint-config-flowtype#readme",
   "keywords": [
     "eslint",
