--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   },
   "devDependencies": {
     "eslint": "^3.9.1",
-    "flow-bin": "^0.38.0",
-    "flowtype": "^2.0.0"
+    "flow-bin": "^0.38.0"
   },
   "engine": {
     "node": "> 4"
@@ -27,7 +26,8 @@
   "license": "MIT",
   "main": "index.js",
   "peerDependencies": {
-    "eslint": "^3.9.1"
+    "eslint": "^3.9.1",
+    "flow-bin": "^0.38.0"
   },
   "repository": {
     "type": "git",
