--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
     "url": "https://github.com/9renpoto/eslint-config-flowtype/pulls"
   },
   "dependencies": {
-    "@9renpoto/eslint-config": "^2.0.1",
+    "@9renpoto/eslint-config": "^2.1.0",
     "babel-eslint": "^7.2.3",
     "eslint-plugin-flowtype": "^2.32.1"
   },
   "devDependencies": {
-    "@9renpoto/eslint-config": "^2.0.1",
     "eslint": "^3.19.0",
-    "flow-bin": "^0.45.0",
-    "prettier": "^1.3.1"
+    "flow-bin": "^0.45.0"
   },
   "engine": {
     "node": "> 5"
