--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "@9renpoto/eslint-config-flowtype",
   "description": "flowtype with eslint",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "author": "github.com/9renpoto",
   "bugs": {
     "url": "https://github.com/9renpoto/eslint-config-flowtype/pulls"
   },
   "dependencies": {
-    "@9renpoto/eslint-config": "^2.1.0",
+    "@9renpoto/eslint-config": "^2.2.0",
     "babel-eslint": "^7.2.3",
-    "eslint-plugin-flowtype": "^2.32.1"
+    "eslint-plugin-flowtype": "^2.35.0"
   },
   "devDependencies": {
-    "eslint": "^4.1.0",
-    "flow-bin": "^0.51.0"
+    "eslint": "^4.3.0",
+    "flow-bin": "^0.51.1"
   },
   "engine": {
     "node": "> 5"
@@ -26,8 +26,8 @@
   "license": "MIT",
   "main": "index.js",
   "peerDependencies": {
-    "eslint": "^4.0.0",
-    "flow-bin": "^0.48.0"
+    "eslint": "4.x",
+    "flow-bin": "0.51.x"
   },
   "repository": {
     "type": "git",
